--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.+'
 }
 
 
