--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:12.0.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation "com.android.support:support-annotations:27.1.1"
     compile 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
@@ -40,19 +41,12 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.+'
+    implementation('com.mikepenz:materialdrawer:4.6.4@aar') {
+        transitive = true
+    }
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
