--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'com.google.firebase:firebase-database:11.0.4'
     implementation 'com.google.firebase:firebase-auth:11.0.4'
-    compile 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -45,8 +45,10 @@ dependencies {
         transitive = true
     }
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.google.android.gms:play-services-places:11.0.4'
+    implementation 'com.google.android.gms:play-services-places:11.0.4'
 }
+
+
 
 
 
