--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     }
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.android.gms:play-services-places:11.0.4'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 }
+
 
 
 
