--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
         <activity
             android:name=".taskcreation.CreateTaskActivity"
             android:label="@string/title_activity_create_task"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".uploadfile.UploadActivity"
+            android:label="@string/title_activity_upload"
             android:theme="@style/AppTheme"></activity>
     </application>
 
