--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.android.gms:play-services-places:11.0.4'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
-    implementation 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    implementation 'br.com.simplepass:loading-button-android:1.14.0'
+    implementation 'com.mikhaellopez:circularprogressbar:1.1.1'
+    implementation 'com.dmitrymalkovich.android:progress-fab:1.6'
+
 }
 
 
