--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
 
     <application
         android:allowBackup="true"
@@ -15,6 +20,16 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCg0OBWRywkSPGhwPyCjGQxSkwiOs2-y6Q" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
 
         <activity android:name=".login.LoginActivity">
             <intent-filter>
@@ -53,10 +68,6 @@
             android:name=".taskcreation.CreateTaskActivity"
             android:label="@string/title_activity_create_task"
             android:theme="@style/AppTheme" />
-        <activity
-            android:name=".uploadfile.UploadActivity"
-            android:label="@string/title_activity_upload"
-            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
