--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:11.0.4'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.mikhaellopez:circularprogressbar:1.1.1'
-
+    implementation 'com.karumi:dexter:4.2.0'
 }
 
 
